# code-librarian-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
config/: settings.py
services/: code_librarian_service.py  models.py  rag_client.py  telemetry.py
tests/: test_code_librarian_service.py  test_normalize_github_url.py
tools/: code_librarian.py  rag.py
