[project]
name = "code-librarian-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "pydantic-settings",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
